# csci474-homomorphic-encryption-demo

./: .gitignore  CMakeLists.txt  README.md  comparison.cpp  seal.hpp  standard.hpp
